<resources>
    <string name="app_name">Notification04</string>
    <string name="btn">SIGN UP</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="telephone">Telephone</string>
    <string name="password">Password</string>
    <string name="rep">Re-type Password</string>
    <string name="btn2">REGISTER</string>
    <string name="btn3">CANCEL</string>

</resources>
